x/y/2015 ola-0.9.6
 Features:
 * 

 API:
 * 

 RDM Tests:
 * 

 Bugs:
 * 

 Internal:
 *

1/3/2015 ola-0.9.5
 Features:
 * Work on a new Web-UI which is built with AngularJS
 * Added E1.37-2 support to the SPI plugin RDM responder
 * USB DMX plug now works on Windows (Scanlime Fadcandy tested working)
 * Update the deb package's udev rules

 Bugs:
 * Fix finding ola_protoc_plugin when cross-compiling.
 * Fix ncurses flags issues between configure and the Makefile.
 * Fix some more build issues on Windows XP
 * Fix our E1.37-2 implementation to match the E1.37-2 standard.
 * Fix the old website's RDM patcher identify function

29/1/2015 ola-0.9.4
 Features:
 * Added support for hotplugging USB devices using the usbdmx plugin, #374.
 * Added support for setting the thread scheduling options, #399.
 * Added support for the Open Pixel Control protocol, #502.
 * Added support for the Scanlime Fadecandy device, #503.
 * Added a GPIO Plugin, closes #299.
 * Added support for the Open DMX clone from KWMATIK.

 API:
 * Plugin libraries that were previously installed under $PREFIX/lib/olad/ are
   now in $PREFIX/lib/

 RDM Tests:
 * Fix a bug with the GetPresetInfo test around display multipliers.

 Bugs:
 * Add a workaround to make the Windows HTTP server more responsive.
 * Fixed defects detected by Coverity Scan.

 Internal:
 * Remove the SLP code since it's no longer required for E1.33.

16/11/2014 ola-0.9.3
 Features:
 * Send the E1.31 Stream Terminated message on shutdown and/or port unpatching.
 * Add support for the draft E1.31 discovery protocol.
 * Switch the dummy responder which implements the E1.37-2 PIDs to their final
   values.
 * Add the ability to whitelist rather than blacklist plugins during configure
   (via --disable-all-plugins) and switch the Windows build to this method.
 * Convert ola_trigger to our flags module; change it's default universe value
   to be 0 to align with other programs.