@@ -21,8 +21,8 @@ Include timestamps.
 Display non-RDM alternate start code frames.
 .IP "--dmx-slot-limit <uint16_t>"
 Only display the first N slots of DMX data.
-.IP "--nouse-epoll"
-Use epoll() when available
+.IP "--no-use-epoll"
+Disable the use of epoll(), revert to select()
 .IP "--pid-location <string>"
 The directory containing the PID definitions.
 .IP "--sample-rate <uint32_t>"
