@@ -32,8 +32,10 @@ Get the serial number.
 Display version information
 .IP "--syslog"
 Send to syslog rather than stderr.
-.IP "--use-epoll"
-Use epoll() if available
+.IP "--no-use-epoll"
+Disable the use of epoll(), revert to select()
+.IP "--no-use-kqueue"
+Disable the use of kqueue(), revert to select()
 .SH EXAMPLES
 .SS See the current parameters of port 0 of device 9:
 ola_usbpro -d 9 -p 0 --get-params
